@@ -2,7 +2,8 @@
 
 	* cupsconnection.c (Connection_addPrinterToClass): Implemented.
 	(Connection_deletePrinterFromClass): Implemented.
-	(Connection_addPrinter): Added 'info' and 'location' keywords.
+	(Connection_addPrinter): Added 'info', 'location', and 'device'
+	keywords.
 	(add_modify_printer_request): New utility function.
 	(Connection_setPrinterInfo): Implemented.
 	(Connection_setPrinterLocation): Implemented.
